# raytracer

./: .gitignore  CMakeLists.txt  README.md  kernel.cu  main.cpp  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: shader.frag  shader.vert
